# MovieSentiments

./: .gitignore  pyproject.toml  requirements.txt  requirements_dev.txt
nlpwebapp/: arnav_webscraper.py  test.py
nlpwebapp/data_cleaning/: MovieSentimentsDC.ipynb
nlpwebapp/data_collection/: example.py  requirements.txt  top_100_movie_reviews.py
nlpwebapp/data_collection/RottenTomatoesScraper/: __init__.py  scraper.py
nlpwebapp/machine_learning/: MovieSentimentsML.ipynb
tests/: test_nlpwebapp.py
