[tool.poetry]
name = "NLPWebApp"
version = "0.1.0"
description = ""
authors = ["dhyey <dhyeylalseta@outlook.com>"]

[tool.poetry.dependencies]
python = "^3.8"
beautifulsoup4 = "^4.9.1"
requests = "^2.24.0"
lxml = "^4.5.2"
html5lib = "^1.1"
pandas = "^1.1.0"
grequests = "^0.6.0"
jupyter = "^1.0.0"
scikit-learn = "^0.23.2"
spacy = "^2.3.2"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
black = "^19.10b0"
pylint = "^2.5.3"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
